Allow 1:n COSMIC identifier:object mappings
Also, break EWAS-check loop early. And some other smaller PR-requested
fixes.